# RAG

./: .env  .gitignore  Makefile  README.md  delete_me.py  main.py  pyproject.toml  to_do.txt
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_docs_public.json
data/processed/4014171b-3543-4092-b73b-5fa5aedd4aba/: index_metadata.pickle
data/processed/80cd3328-e176-47aa-9adf-245ec093ca33/: index_metadata.pickle
data/processed/81a37079-ac26-46ec-8ff4-0483e636652a/: index_metadata.pickle
data/processed/9df17ed3-4ece-428d-a799-a0f88e75be3d/: index_metadata.pickle
data/processed/b2adc70c-938f-42e7-a33d-6179149908ea/: index_metadata.pickle
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
evaluations/retrieval/2026-06-19_18-35-33/search_results/: dataset_code_private.json  dataset_docs_private.json
evaluations/retrieval/2026-06-19_18-46-15/search_results/: dataset_code_private.json  dataset_docs_private.json
evaluations/retrieval/2026-06-19_21-32-45/search_results/: dataset_code_private.json  dataset_docs_private.json
evaluations/retrieval/2026-06-19_21-46-34/search_results/: dataset_code_private.json  dataset_docs_private.json
src/: __main__.py  answerer.py  chunker.py  evaluator.py  indexer.py  llm_model.py  main.py  models.py  retriever.py
student/: __main__.py  answerer.py  chunker.py  evaluator.py  indexer.py  llm_model.py  models.py  retriever.py
(+19 files in other folders)
