[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "fire>=0.7.1",
    "huggingface-hub>=1.15.0",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
]
